Extracted reusable TestResources rule out of AbstractCopyIntegrationTest and AbstractIntegrationTest.getTestBuildFile()

--- a/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/ArtifactDependenciesIntegrationTest/canNestModules/projectWithNestedModules.gradle
+++ b/subprojects/gradle-core/src/integTest/resources/org/gradle/integtests/ArtifactDependenciesIntegrationTest/canNestModules/projectWithNestedModules.gradle
@@ -19,6 +19,10 @@ dependencies {
 
 defaultTasks 'listJars'
 
+file("projectA-1.2.jar").text = ''
+file("projectB-1.5.jar").text = ''
+file("projectC-2.0.jar").text = ''
+
 task listJars << {
     List jars = configurations.compile.collect { it.name }
     Assert.assertTrue(jars.contains('projectA-1.2.jar'))
