Added some documentation for reporting. Fixed bug in announce sample script.

--- a/subprojects/gradle-docs/src/samples/announce/build.gradle
+++ b/subprojects/gradle-docs/src/samples/announce/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'announce'
 
 //START SNIPPET announce-plugin-conf
 announce {  
-  username announce.twitter.username
-  password announce.twitter.password 
+  username = 'myId'
+  password = 'myPassword'
 }
 //END SNIPPET announce-plugin-conf
 
