--- a/subprojects/gradle-plugins/plugins.gradle
+++ b/subprojects/gradle-plugins/plugins.gradle
@@ -31,7 +31,7 @@ dependencies {
             libraries.junit,
             libraries.ant_junit,
             libraries.ant,
-            'org.testng:testng:5.11:jdk15',
+            'org.testng:testng:5.12.1',
             'dom4j:dom4j:1.6.1@jar',
             'jaxen:jaxen:1.1@jar'
 
