GRADLE-819 - Moved ProjectBuilder to o.g.testfixtures - Changed ProjectBuilder to handle project.apply from: - Changed HelperUtil to use ProjectBuilder - Some changes to the custom plugin sample

--- a/subprojects/gradle-docs/docs.gradle
+++ b/subprojects/gradle-docs/docs.gradle
@@ -182,8 +182,9 @@ task javadoc(type: Javadoc) {
     include 'org/gradle/api/**'
     include 'org/gradle/*'
     include 'org/gradle/external/javadoc/**'
+    include 'org/gradle/process/**'
+    include 'org/gradle/testfixtures/**'
     exclude '**/internal/**'
-    optionsFile = file("$buildDir/tmp/javadoc.options")
     options.links("http://java.sun.com/j2se/1.5.0/docs/api", "http://groovy.codehaus.org/gapi/", "http://maven.apache.org/ref/2.2.1/maven-core/apidocs",
         "http://maven.apache.org/ref/2.2.1/maven-model/apidocs")
     doFirst {
