--- a/subprojects/gradle-docs/src/samples/userguide/tasks/customTask/build.gradle
+++ b/subprojects/gradle-docs/src/samples/userguide/tasks/customTask/build.gradle
@@ -1,15 +1,13 @@
-import org.gradle.api.DefaultTask
-import org.gradle.api.tasks.TaskAction
 
 // START SNIPPET add-action
-task hello(type: HelloTask)
+task hello(type: GreetingTask)
 
 // START SNIPPET define-task
-class HelloTask extends DefaultTask {
+class GreetingTask extends DefaultTask {
 // END SNIPPET define-task
     @TaskAction
-    def printGreeting() {
-        println 'hello from HelloTask'
+    def greet() {
+        println 'hello from GreetingTask'
     }
 // START SNIPPET define-task
 }
