--- a/build.gradle
+++ b/build.gradle
@@ -41,31 +41,31 @@ startScriptsDir = new File("$buildDir/startScripts")
 archivesBaseName = 'gradle'
 
 libraries = [
-        ant             : 'org.apache.ant:ant:1.8.0@jar',
-        ant_junit       : 'org.apache.ant:ant-junit:1.8.0@jar',
-        ant_launcher    : 'org.apache.ant:ant-launcher:1.8.0@jar',
-        ant_nodeps      : 'org.apache.ant:ant-nodeps:1.8.0@jar',
-        ant_antlr       : 'org.apache.ant:ant-antlr:1.8.0@jar',
-        antlr           : 'antlr:antlr:2.7.7@jar',
-        asm_all         : 'asm:asm-all:3.2@jar',
-        commons_cli     : 'commons-cli:commons-cli:1.2@jar',
-        commons_io      : 'commons-io:commons-io:1.4@jar',
-        commons_lang    : 'commons-lang:commons-lang:2.5@jar',
-        dom4j           : 'dom4j:dom4j:1.6.1@jar',
-        groovy          : 'org.codehaus.groovy:groovy-all:1.7.1@jar',
-        ivy             : 'org.apache.ivy:ivy:2.1.0@jar',
-        jaxen           : 'jaxen:jaxen:1.1@jar',
-        jopt_simple     : 'net.sf.jopt-simple:jopt-simple:3.2@jar',
-        slf4j_api       : 'org.slf4j:slf4j-api:1.6.0@jar',
-        jcl_to_slf4j    : 'org.slf4j:jcl-over-slf4j:1.6.0@jar',
-        jul_to_slf4j    : 'org.slf4j:jul-to-slf4j:1.6.0@jar',
-        log4j_to_slf4j  : 'org.slf4j:log4j-over-slf4j:1.6.0@jar',
-        logback_classic : 'ch.qos.logback:logback-classic:0.9.21@jar',
-        logback_core    : 'ch.qos.logback:logback-core:0.9.21@jar',
-        junit           : 'junit:junit:4.8.1',
-        xmlunit         : 'xmlunit:xmlunit:1.3',
-        spock           : 'org.spockframework:spock-core:0.4-groovy-1.7-SNAPSHOT'
-    ]
+        ant: 'org.apache.ant:ant:1.8.0@jar',
+        ant_junit: 'org.apache.ant:ant-junit:1.8.0@jar',
+        ant_launcher: 'org.apache.ant:ant-launcher:1.8.0@jar',
+        ant_nodeps: 'org.apache.ant:ant-nodeps:1.8.0@jar',
+        ant_antlr: 'org.apache.ant:ant-antlr:1.8.0@jar',
+        antlr: 'antlr:antlr:2.7.7@jar',
+        asm_all: 'asm:asm-all:3.2@jar',
+        commons_cli: 'commons-cli:commons-cli:1.2@jar',
+        commons_io: 'commons-io:commons-io:1.4@jar',
+        commons_lang: 'commons-lang:commons-lang:2.5@jar',
+        dom4j: 'dom4j:dom4j:1.6.1@jar',
+        groovy: 'org.codehaus.groovy:groovy-all:1.7.1@jar',
+        ivy: 'org.apache.ivy:ivy:2.1.0@jar',
+        jaxen: 'jaxen:jaxen:1.1@jar',
+        jopt_simple: 'net.sf.jopt-simple:jopt-simple:3.2@jar',
+        slf4j_api: 'org.slf4j:slf4j-api:1.6.0@jar',
+        jcl_to_slf4j: 'org.slf4j:jcl-over-slf4j:1.6.0@jar',
+        jul_to_slf4j: 'org.slf4j:jul-to-slf4j:1.6.0@jar',
+        log4j_to_slf4j: 'org.slf4j:log4j-over-slf4j:1.6.0@jar',
+        logback_classic: 'ch.qos.logback:logback-classic:0.9.21@jar',
+        logback_core: 'ch.qos.logback:logback-core:0.9.21@jar',
+        junit: 'junit:junit:4.8.1',
+        xmlunit: 'xmlunit:xmlunit:1.3',
+        spock: 'org.spockframework:spock-core:0.4-groovy-1.7-SNAPSHOT'
+]
 
 libraries.groovy_depends = [libraries.groovy, libraries.commons_cli]
 libraries.jetty_depends = ["org.mortbay.jetty:jetty:6.1.22@jar", "org.mortbay.jetty:jetty-util:6.1.22@jar",
@@ -123,7 +123,17 @@ configure(groovyProjects()) {
     }
 }
 
+buildscript {
+    repositories {
+        mavenRepo urls: 'http://gradle.artifactoryonline.com/gradle/plugins-snapshots-local'
+    }
+    dependencies {
+        classpath "org.gradle.plugins:gradle-intellij-plugin:0.1-SNAPSHOT"
+    }
+}
+
 allprojects {
+    apply plugin: org.gradle.plugins.idea.IdeaPlugin
     def config = configurations.findByName('testRuntime')
     if (!config) {
         return
@@ -132,6 +142,16 @@ allprojects {
     task ide(type: Sync) {
         into "$ideDir/lib"
         from { config.copyRecursive {dep -> !(dep instanceof ProjectDependency)}.files }
+    }
+    ideaModule {
+        outputDir = "$rootProject.projectDir/intellij/out" as File
+        testOutputDir = "$rootProject.projectDir/intellij/testOut" as File
+    }
+}
+
+ideaProject {
+    withXml { xml ->
+        xml.component.find { it.name = 'CompilerConfiguration'}.wildcardResourcePatterns[0].appendNode('entry', [name: '?*.gradle'])
     }
 }
 
