Fixed bug in intellij configuration which added libs twice to gradle-core.

--- a/subprojects/gradle-core/core.gradle
+++ b/subprojects/gradle-core/core.gradle
@@ -112,7 +112,7 @@ ideaModule {
     scopes.COMPILE.plus.addAll([configurations.integTestCompile])
     scopes.RUNTIME.plus.addAll([configurations.integTestRuntime])
     scopes.RUNTIME.minus.addAll([configurations.integTestCompile])
-    scopes.remove('test')
+    scopes.remove('TEST')
 }
 
 
