Let intellij module files export all dependencies.

--- a/build.gradle
+++ b/build.gradle
@@ -146,6 +146,9 @@ allprojects {
     ideaModule {
         outputDir = "$rootProject.projectDir/intellij/out" as File
         testOutputDir = "$rootProject.projectDir/intellij/testOut" as File
+        whenConfigured { module ->
+            module.dependencies*.exported = true
+        }
     }
 }
 
