--- a/subprojects/gradle-docs/src/samples/mavenRepo/build.gradle
+++ b/subprojects/gradle-docs/src/samples/mavenRepo/build.gradle
@@ -1,8 +1,22 @@
-import org.gradle.util.GradleUtil
-import org.gradle.api.artifacts.ResolverContainer
 
 sillyexceptions = 'sillyexceptions'
 repotest = 'repotest'
+
+/*
+ * Copyright 2010 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 /*
  * gradle_sourceforge:
@@ -76,12 +90,12 @@ dependencies {
 }
 
 task retrieve << {
-    GradleUtil.deleteDir(buildDir)
-    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/$sillyexceptions"))
-    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/$repotest"))
-    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/testdep"))
-    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/testdep2"))
-    GradleUtil.deleteDir(new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/jaronly"))
+    delete buildDir
+    delete new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/$sillyexceptions")
+    delete new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/$repotest")
+    delete new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/testdep")
+    delete new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/testdep2")
+    delete new File(gradle.gradleUserHomeDir, "$ResolverContainer.DEFAULT_CACHE_DIR_NAME/jaronly")
     copy {
         from configurations.test
         into buildDir
