GRADLE-965 Add executable prop to Javadoc.

--- a/build.gradle
+++ b/build.gradle
@@ -151,6 +151,10 @@ allprojects {
     }
 }
 
+ideaModule {
+    excludeDirs.add('intTestHomeDir')    
+}
+
 ideaProject {
     wildcards += ['?*.gradle']
     javaVersion = '1.6'
