Extracted multiple plugins from gradle-plugins.

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,11 @@ include 'core'
 include 'wrapper'
 include 'launcher'
 include 'plugins'
+include 'scala'
+include 'eclipse'
+include 'osgi'
+include 'maven'
+include 'announce'
 include 'jetty'
 include 'codeQuality'
 include 'antlr'
