--- a/build.gradle
+++ b/build.gradle
@@ -411,7 +411,7 @@ def runtimeProjects() {
 }
 
 def pluginProjects() {
-    ['plugins', 'codeQuality', 'jetty', 'antlr', 'wrapper'].collect { project(it) }
+    ['plugins', 'codeQuality', 'jetty', 'antlr', 'wrapper', 'osgi', 'maven', 'eclipse', 'announce', 'scala'].collect { project(it) }
 }
 
 class Version {
