--- a/subprojects/gradle-maven/maven.gradle
+++ b/subprojects/gradle-maven/maven.gradle
@@ -13,32 +13,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-configurations {
-    testFixtures
-}
-
 dependencies {
     groovy libraries.groovy_depends
 
     compile project(':core')
-
-    compile libraries.slf4j_api,
-            libraries.commons_lang,
-            libraries.asm_all,
-            libraries.junit,
-            libraries.ant_junit,
-            libraries.ant,
-            'org.testng:testng:5.12.1'
-
-    testCompile libraries.xmlunit
+    compile project(':plugins')
+    compile libraries.slf4j_api
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
-    testFixtures sourceSets.test.classes
-}
-
-test {
-    exclude 'org/gradle/api/internal/tasks/testing/junit/ATestClass*.*'
-    jvmArgs '-Xms128m', '-Xmx256m', '-XX:+HeapDumpOnOutOfMemoryError'
 }
