--- a/subprojects/gradle-osgi/osgi.gradle
+++ b/subprojects/gradle-osgi/osgi.gradle
@@ -13,32 +13,20 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-configurations {
-    testFixtures
+repositories {
+    mavenRepo urls: 'http://www.aQute.biz/repo'
 }
 
 dependencies {
     groovy libraries.groovy_depends
 
     compile project(':core')
+    compile project(':plugins')
+    compile libraries.slf4j_api
 
-    compile libraries.slf4j_api,
-            libraries.commons_lang,
-            libraries.asm_all,
-            libraries.junit,
-            libraries.ant_junit,
-            libraries.ant,
-            'org.testng:testng:5.12.1'
-
-    testCompile libraries.xmlunit
+    compile 'biz.aQute:bndlib:0.0.384@jar'
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
-    testFixtures sourceSets.test.classes
 }
 
-test {
-    exclude 'org/gradle/api/internal/tasks/testing/junit/ATestClass*.*'
-    jvmArgs '-Xms128m', '-Xmx256m', '-XX:+HeapDumpOnOutOfMemoryError'
-}
